--- a/NSF_References.bib
+++ b/NSF_References.bib
@@ -1,3 +1,31 @@
+@article{Lemmon2008,
+author = {Lemmon, Alan R. and Lemmon, Emily Moriarty},
+title = {A Likelihood Framework for Estimating Phylogeographic History on a Continuous Landscape},
+journal = {Systematic Biology},
+volume = {57},
+number = {4},
+pages = {544-561},
+year = {2008},
+doi = {10.1080/10635150802304761},
+URL = {http://dx.doi.org/10.1080/10635150802304761},
+eprint = {/oup/backfile/content_public/journal/sysbio/57/4/10.1080_10635150802304761/4/57-4-544.pdf}
+}
+
+@article{Quintero2015,
+   author = {Quintero, I. and Keil, P. and Jetz, W. and Crawford, F. W.},
+   title = {Historical Biogeography Using Species Geographical Ranges},
+   journal = {Syst Biol},
+   volume = {64},
+   number = {6},
+   pages = {1059-73},
+   ISSN = {1076-836X (Electronic)
+1063-5157 (Linking)},
+   DOI = {10.1093/sysbio/syv057},
+   url = {https://www.ncbi.nlm.nih.gov/pubmed/26254671},
+   year = {2015},
+   type = {Journal Article}
+}
+
 @article{Uyeda2018,
 author = {Uyeda, Josef C and Zenil-Ferguson, Rosana and Pennell, Matthew W},
 title = {Rethinking phylogenetic comparative methods},
